--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main.js",
+    "start": "node index.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "prestart:prod": "rimraf dist && yarn run build",
+    "foreman": "foreman start -f Procfile.dev",
+    "prestart:prod": "yarn tsc",
+    "start:prod": "node dist/main.js",
     "postinstall": "tsc --sourceMap false",
     "lint": "eslint \"{src,apps,libssrc,test}/**/*.ts\" --fix",
     "test": "jest",
