--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/testing": "^6.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.10.1",
     "dotenv": "^16.0.1",
