--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node index.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "foreman": "foreman start -f Procfile.dev",
-    "prestart:prod": "yarn tsc",
-    "start:prod": "node dist/main.js",
-    "postinstall": "tsc --sourceMap false",
-    "lint": "eslint \"{src,apps,libssrc,test}/**/*.ts\" --fix",
+    "start:prod": "node dist/main",
+    "postinstall": "npm run build",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -33,7 +31,6 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/testing": "^9.0.11",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.10.1",
     "dotenv": "^16.0.1",
@@ -43,7 +40,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "ts-node": "^10.9.1",
     "typeorm": "^0.2.41",
     "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^8.3.2"
@@ -67,7 +63,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
